# ray_info_2025

./: .gitignore  BASECOLLECTOR_REMOVAL_REPORT.md  COLLECTOR_REFACTORING_REPORT.md  MES_POST_ID_REFACTOR_REPORT.md  OLD_SCHEDULER_REMOVAL_REPORT.md  RAY_SCHEDULER_IMPLEMENTATION_REPORT.md  README.md  README_INTEGRATION.md  README_READ_STATUS_FEATURE.md  REFACTORING_COMPLETION_REPORT.md  api_test.html  run_backend.sh  test_collector_state_persistence.py  test_concurrent_fix.py  test_flutter_api.dart  test_integration.py  test_mes_executor_refactor.py  test_mes_uuid_refactor.py  test_quota_handling.py  test_quota_verification.py  test_ray_scheduler.py  test_ray_scheduler_core.py  test_rayscheduler_integration.py  test_read_status_api.html  test_read_status_fix.py  test_read_status_integration.py  test_refactoring.py  verify_basecollector_removal.py  verify_old_scheduler_removal.py  verify_persistence.py  verify_refactoring.py  架构设计：Python 异步任务调度框架.md
rayinfo_backend/: README.md  pyproject.toml  pyrightconfig.json  rayinfo.yaml  rayinfo.yaml.example  test_mes_executor_refactor.py  trigger_instance.sh
rayinfo_backend/src/rayinfo_backend/: app.py  state.py
rayinfo_backend/src/rayinfo_backend/api/: repositories.py  schemas.py  services.py
rayinfo_backend/src/rayinfo_backend/api/v1/: __init__.py  routes.py
rayinfo_backend/src/rayinfo_backend/collectors/: __init__.py  base.py
rayinfo_backend/src/rayinfo_backend/collectors/mes/: __init__.py  mes_executor.py  search.py
rayinfo_backend/src/rayinfo_backend/config/: loaders.py  settings.py  validators.py
rayinfo_backend/src/rayinfo_backend/models/: info_item.py  task.py
rayinfo_backend/src/rayinfo_backend/pipelines/: __init__.py  base.py  dedup_stage.py  persist_stages.py  pipeline.py  stage_base.py  utils.py
rayinfo_backend/src/rayinfo_backend/ray_scheduler/: __init__.py  adapters.py  consumer.py  execution_manager.py  ray_adapter.py  registry.py  scheduler.py  task.py  types.py
rayinfo_backend/src/rayinfo_backend/scheduling/: README.md  __init__.py  scheduler.py  state_manager.py  strategies.py  types.py
rayinfo_backend/src/rayinfo_backend/utils/: instance_id.py  logging.py  task_catalog.py
rayinfo_backend/tests/: test_instance_manager.py  test_task_catalog.py
(+68 files in other folders)
