[project]
name = "rayinfo-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxiee",email = "maxieewong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "playwright (>=1.54.0,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.6.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "rayinfo_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
